Update and delete text field
  - Display text field in a textarea
  - Ask for confirmation before deleting a field
  - update store in optimistic way
  - Add external label property on profile form's fields

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -167,6 +167,7 @@
 	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Editar",
 	"generic.email": "Correu electrònic",
+	"generic.error.oops": "Vaja! Alguna cosa ha fallat!",
 	"generic.expand_info": "desplegar tota la informació",
 	"generic.find_it": "Troba'l",
 	"generic.go": "Accedir",
@@ -439,9 +440,14 @@
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
-	"resource.field-file": "Camp de fitxer",
-	"resource.field-link": "Camp d'enllaç",
-	"resource.field-text": "Camp de text",
+	"resource.field-file": "Camp de Fitxer",
+	"resource.field-link": "Camp d'Enllaç",
+	"resource.field-text": "Camp de Text",
+	"resource.field.delete": "Suprimeix el camp",
+	"resource.field.delete-confirm-description": "Confirmeu que voleu suprimir aquest {{type}}?",
+	"resource.field.delete-confirm-title": "Vols suprimir {{type}}?",
+	"resource.field.delete-successful": "S'ha suprimit el camp correctament",
+	"resource.field.update-successful": "Actualització correcta del camp",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
