--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -167,6 +167,7 @@
 	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Edit",
 	"generic.email": "Correo electrónico",
+	"generic.error.oops": "Ups! Algo ha ido mal!",
 	"generic.expand_info": "desplegar toda la información",
 	"generic.find_it": "Encuéntralo ",
 	"generic.go": "Acceder",
@@ -439,9 +440,14 @@
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
-	"resource.field-file": "Campo de archivo",
-	"resource.field-link": "Campo de enlace",
-	"resource.field-text": "Campo de texto",
+	"resource.field-file": "Campo de Archivo",
+	"resource.field-link": "Campo de Enlace",
+	"resource.field-text": "Campo de Texto",
+	"resource.field.delete": "Eliminar campo",
+	"resource.field.delete-confirm-description": "¿Está seguro de que desea eliminar esto {{type}}?",
+	"resource.field.delete-confirm-title": "¿Eliminar {{type}}?",
+	"resource.field.delete-successful": "Eliminación de campo exitosa",
+	"resource.field.update-successful": "Actualización de campo exitosa",
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
