--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -206,6 +206,7 @@
 	"generic.edit": "Edit",
 	"generic.email": "Email",
 	"generic.enabled": "Enabled",
+	"generic.error.oops": "Oops! Something went wrong!",
 	"generic.expand_info": "show all information ",
 	"generic.find_it": "Find it",
 	"generic.go": "Go",
@@ -485,9 +486,14 @@
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.failed_resources_popover": "Processing failed files",
-	"resource.field-file": "File field",
-	"resource.field-link": "Link field",
-	"resource.field-text": "Text field",
+	"resource.field-file": "File Field",
+	"resource.field-link": "Link Field",
+	"resource.field-text": "Text Field",
+	"resource.field.delete": "Delete field",
+	"resource.field.delete-confirm-description": "Are you sure you want to delete this {{type}}?",
+	"resource.field.delete-confirm-title": "Delete {{type}}?",
+	"resource.field.delete-successful": "Field deletion successful",
+	"resource.field.update-successful": "Field update successful",
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Profile",
