Update and delete file field

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -441,6 +441,9 @@
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
 	"resource.field-file": "Camp de Fitxer",
+	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
+	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer a continuació o feu clic per seleccionar-lo",
+	"resource.field-file.new-file": "Nou fitxer:",
 	"resource.field-link": "Camp d'Enllaç",
 	"resource.field-text": "Camp de Text",
 	"resource.field.delete": "Suprimeix el camp",
