--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -441,6 +441,9 @@
 	"resource.entities.work_of_art": "Obras",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
 	"resource.field-file": "Campo de Archivo",
+	"resource.field-file.dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
+	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo a continuación o haga clic para seleccionarlo",
+	"resource.field-file.new-file": "Archivo nuevo:",
 	"resource.field-link": "Campo de Enlace",
 	"resource.field-text": "Campo de Texto",
 	"resource.field.delete": "Eliminar campo",
