--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -446,11 +446,15 @@
 	"resource.field-file.new-file": "Nou fitxer:",
 	"resource.field-link": "Camp d'Enllaç",
 	"resource.field-text": "Camp de Text",
+	"resource.field-text-body-label": "Cos del text",
+	"resource.field-text-format-label": "Format de text",
+	"resource.field.add": "Afegeix un camp",
+	"resource.field.addition-successful": "El camp s'ha afegit correctament",
 	"resource.field.delete": "Suprimeix el camp",
 	"resource.field.delete-confirm-description": "Confirmeu que voleu suprimir aquest {{type}}?",
 	"resource.field.delete-confirm-title": "Vols suprimir {{type}}?",
-	"resource.field.delete-successful": "S'ha suprimit el camp correctament",
-	"resource.field.update-successful": "Actualització correcta del camp",
+	"resource.field.delete-successful": "El camp s'ha suprimit correctament",
+	"resource.field.update-successful": "El camp s'ha actualitzat correctament",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
@@ -476,6 +480,7 @@
 	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
 	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.title": "Títol del recurs",
+	"resource.tooltip.add-field": "Afegeix un camp",
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.edition": "Edició",
 	"resource.visible_columns_dropdown": "Es mostren les columnes",
