--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -446,11 +446,15 @@
 	"resource.field-file.new-file": "Archivo nuevo:",
 	"resource.field-link": "Campo de Enlace",
 	"resource.field-text": "Campo de Texto",
+	"resource.field-text-body-label": "Cuerpo de texto",
+	"resource.field-text-format-label": "Formato de texto",
+	"resource.field.add": "Agregar un campo",
+	"resource.field.addition-successful": "Campo agregado con éxito",
 	"resource.field.delete": "Eliminar campo",
 	"resource.field.delete-confirm-description": "¿Está seguro de que desea eliminar esto {{type}}?",
 	"resource.field.delete-confirm-title": "¿Eliminar {{type}}?",
-	"resource.field.delete-successful": "Eliminación de campo exitosa",
-	"resource.field.update-successful": "Actualización de campo exitosa",
+	"resource.field.delete-successful": "Campo eliminado con éxito",
+	"resource.field.update-successful": "Campo actualizado con éxito",
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
@@ -476,6 +480,7 @@
 	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
 	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
 	"resource.title": "Título del recurso",
+	"resource.tooltip.add-field": "Agregar un campo",
 	"resource.tooltip.classification": "Clasificación",
 	"resource.tooltip.edition": "Edición",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
