[sc-3590] Resource fields edition, deletion and addition (#513)
* Navigation between fields

  - Display fields on the left side of profile view
  - Display profile by default when changing view
  - Improve nav block style

* Update and delete text field

  - Display text field in a textarea
  - Ask for confirmation before deleting a field
  - update store in optimistic way
  - Add external label property on profile form's fields

* Update and delete link field

* Update and delete file field

* Fix error management

* Field addition

* Fix active field in nav when multiple fields of type

* Use existing TextFieldFormat and add link validation

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -167,6 +167,7 @@
 	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Editar",
 	"generic.email": "Correu electrònic",
+	"generic.error.oops": "Vaja! Alguna cosa ha fallat!",
 	"generic.expand_info": "desplegar tota la informació",
 	"generic.find_it": "Troba'l",
 	"generic.go": "Accedir",
@@ -439,6 +440,21 @@
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
+	"resource.field-file": "Camp de Fitxer",
+	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
+	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
+	"resource.field-file.new-file": "Nou fitxer:",
+	"resource.field-link": "Camp d'Enllaç",
+	"resource.field-text": "Camp de Text",
+	"resource.field-text-body-label": "Cos del text",
+	"resource.field-text-format-label": "Format de text",
+	"resource.field.add": "Afegeix un camp",
+	"resource.field.addition-successful": "El camp s'ha afegit correctament",
+	"resource.field.delete": "Suprimeix el camp",
+	"resource.field.delete-confirm-description": "Confirmeu que voleu suprimir aquest {{type}}?",
+	"resource.field.delete-confirm-title": "Vols suprimir {{type}}?",
+	"resource.field.delete-successful": "El camp s'ha suprimit correctament",
+	"resource.field.update-successful": "El camp s'ha actualitzat correctament",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
@@ -464,6 +480,7 @@
 	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
 	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.title": "Títol del recurs",
+	"resource.tooltip.add-field": "Afegeix un camp",
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.edition": "Edició",
 	"resource.visible_columns_dropdown": "Es mostren les columnes",
