--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -167,6 +167,7 @@
 	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Edit",
 	"generic.email": "Correo electrónico",
+	"generic.error.oops": "Ups! Algo ha ido mal!",
 	"generic.expand_info": "desplegar toda la información",
 	"generic.find_it": "Encuéntralo ",
 	"generic.go": "Acceder",
@@ -439,6 +440,21 @@
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
+	"resource.field-file": "Campo de Archivo",
+	"resource.field-file.dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
+	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
+	"resource.field-file.new-file": "Archivo nuevo:",
+	"resource.field-link": "Campo de Enlace",
+	"resource.field-text": "Campo de Texto",
+	"resource.field-text-body-label": "Cuerpo de texto",
+	"resource.field-text-format-label": "Formato de texto",
+	"resource.field.add": "Agregar un campo",
+	"resource.field.addition-successful": "Campo agregado con éxito",
+	"resource.field.delete": "Eliminar campo",
+	"resource.field.delete-confirm-description": "¿Está seguro de que desea eliminar esto {{type}}?",
+	"resource.field.delete-confirm-title": "¿Eliminar {{type}}?",
+	"resource.field.delete-successful": "Campo eliminado con éxito",
+	"resource.field.update-successful": "Campo actualizado con éxito",
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
@@ -464,6 +480,7 @@
 	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
 	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
 	"resource.title": "Título del recurso",
+	"resource.tooltip.add-field": "Agregar un campo",
 	"resource.tooltip.classification": "Clasificación",
 	"resource.tooltip.edition": "Edición",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
