--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -206,6 +206,7 @@
 	"generic.edit": "Edit",
 	"generic.email": "Email",
 	"generic.enabled": "Enabled",
+	"generic.error.oops": "Oops! Something went wrong!",
 	"generic.expand_info": "show all information ",
 	"generic.find_it": "Find it",
 	"generic.go": "Go",
@@ -485,8 +486,21 @@
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.failed_resources_popover": "Processing failed files",
-	"resource.file": "File",
-	"resource.link": "Link",
+	"resource.field-file": "File Field",
+	"resource.field-file.dropzone": "Drop your file here or click to select it",
+	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
+	"resource.field-file.new-file": "New file:",
+	"resource.field-link": "Link Field",
+	"resource.field-text": "Text Field",
+	"resource.field-text-body-label": "Text body",
+	"resource.field-text-format-label": "Text format",
+	"resource.field.add": "Add a field",
+	"resource.field.addition-successful": "Field added successfully",
+	"resource.field.delete": "Delete field",
+	"resource.field.delete-confirm-description": "Are you sure you want to delete this {{type}}?",
+	"resource.field.delete-confirm-title": "Delete {{type}}?",
+	"resource.field.delete-successful": "Field deleted successfully",
+	"resource.field.update-successful": "Field updated successfully",
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Profile",
@@ -514,6 +528,7 @@
 	"resource.thumbnail.help": "Upload an image or pick from suggestions",
 	"resource.title": "Resource title",
 	"resource.toast.save-successful": "",
+	"resource.tooltip.add-field": "Add a field",
 	"resource.tooltip.classification": "Classification",
 	"resource.tooltip.edition": "Edition",
 	"resource.visible_columns_dropdown": "Columns displayed",
