add phone number in onboarding form (#514)
* add phone number in onboarding form

* fix test

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -355,6 +355,9 @@
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
 	"onboarding.kb_creation": "Creació d'emmagatzematge...",
+	"onboarding.phone": "Número de telèfon",
+	"onboarding.phone.invalid_code": "Codi invàlid",
+	"onboarding.phone.invalid_number": "Número de telèfon no vàlid",
 	"onboarding.search_engine_label": "Quin motor de cerca utilitzeu per a dades internes?",
 	"onboarding.search_engine_placeholder": "Estic una mica decebut amb...",
 	"onboarding.setting_up": "⏳ Estem configurant el teu compte",
