--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -397,6 +397,9 @@
 	"onboarding.industry_label": "What industry are you in? ",
 	"onboarding.industry_placeholder": "Choose an industry",
 	"onboarding.kb_creation": "Storage creation…",
+	"onboarding.phone": "Phone number",
+	"onboarding.phone.invalid_code": "Invalid code",
+	"onboarding.phone.invalid_number": "Invalid phone number",
 	"onboarding.search_engine_label": "What search engine are you using for internal data?",
 	"onboarding.search_engine_placeholder": "I'm a little disappointed with…",
 	"onboarding.setting_up": "⏳ ​ We’re setting your account up",
