--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -355,6 +355,9 @@
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
 	"onboarding.kb_creation": "Creación de almacenamiento…",
+	"onboarding.phone": "Número de teléfono",
+	"onboarding.phone.invalid_code": "Codigo invalido",
+	"onboarding.phone.invalid_number": "Numero de telefono invalido",
 	"onboarding.search_engine_label": "¿Qué motor de búsqueda está utilizando para los datos internos?",
 	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
 	"onboarding.setting_up": "⏳ Estamos configurando tu cuenta",
