--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -416,7 +416,7 @@
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.authorship": "Autoría",
-	"resource.classification": "Clasificación",
+	"resource.classification": "Clasificación de recursos",
 	"resource.created": "Data de creación",
 	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
@@ -443,6 +443,7 @@
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
+	"resource.field-classification": "Clasificación de párrafos",
 	"resource.field-file": "Campo de Archivo",
 	"resource.field-file.dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
 	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
