[sc-3492] New paragraph label annotation flow (#519)
* Fix label-field kind update to allow paragraph labels selection

* Add single label selection support on label-dropdown

* Paragraph classification

* Improve copy and fix viewer edit menu

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -462,14 +462,14 @@
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.authorship": "Authorship",
-	"resource.classification": "Classification",
+	"resource.classification": "Resource classification",
 	"resource.created": "Created",
 	"resource.delete_resource_confirm": "Delete document?",
 	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
 	"resource.delete_resources_confirm": "Delete documents?",
 	"resource.delete_resources_warning": "Deleting these documents will also delete all processed information.",
 	"resource.description.title": "Description",
-	"resource.edit": "Edit resource",
+	"resource.edit": "Edit & Annotate",
 	"resource.entities.date": "Date",
 	"resource.entities.event": "Events",
 	"resource.entities.fac": "Constructions",
@@ -489,6 +489,7 @@
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.failed_resources_popover": "Processing failed files",
+	"resource.field-classification": "Paragraphs classification",
 	"resource.field-file": "File Field",
 	"resource.field-file.dropzone": "Drop your file here or click to select it",
 	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
