--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -416,14 +416,14 @@
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.authorship": "Autoria",
-	"resource.classification": "Classificació",
+	"resource.classification": "Classificació de recursos",
 	"resource.created": "Data creació",
 	"resource.delete_resource_confirm": "Vols suprimir el document?",
 	"resource.delete_resource_warning": "Si elimines aquest document també s’esborrarà tota la informació processada.",
 	"resource.delete_resources_confirm": "Vols suprimir documents?",
 	"resource.delete_resources_warning": "Si elimines aquests documents també s’esborrarà tota la informació processada.",
 	"resource.description.title": "Descripció",
-	"resource.edit": "Editar recurs",
+	"resource.edit": "Edita i anota",
 	"resource.entities.date": "Dates",
 	"resource.entities.event": "Esdeveniments",
 	"resource.entities.fac": "Construccions",
@@ -443,6 +443,7 @@
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
+	"resource.field-classification": "Classificació de paràgrafs",
 	"resource.field-file": "Camp de Fitxer",
 	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
 	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
