Labeler training update
  - Distinct labeler tasks for resources and paragraphs
  - Can choose only one label set when training labeler for resources/paragraphs

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -569,13 +569,25 @@
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "¡Importante! Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"stash.settings": "Preferencias de la caja de conocimiento",
+	"stash.settings.processes.classifier": "Capacitación de intención de búsqueda de etiquetas",
+	"stash.settings.processes.classifier.info": "Para obtener sugerencias precisas de búsqueda de etiquetas, se debe etiquetar el contenido existente. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.ner": "Capacitación en reconocimiento de entidades nombradas",
+	"stash.settings.processes.ner.info": "Para reconocer sus entidades personalizadas automáticamente, el contenido existente debe anotarse con sus entidades personalizadas. A medida que se anota más contenido, la capacitación mejorará. Puede crear nuevas entidades personalizadas desde la página Insights.",
+	"stash.settings.processes.paragraph_labeler": " Entrenamiento automático de etiquetas de párrafo",
+	"stash.settings.processes.paragraph_labeler.info": "Para etiquetar párrafos automáticamente, los párrafos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.resource_labeler": " Entrenamiento automático de etiquetas de recursos",
+	"stash.settings.processes.resource_labeler.info": "Para etiquetar recursos automáticamente, los recursos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.training.active": "Hay un entrenamiento activo que puedes detener en cualquier momento. Recibirás un correo electrónico cuando esté completo.",
 	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
 	"stash.settings.processes.training.last_run": "Última ejecución: {{ runDate }}",
 	"stash.settings.processes.training.no-resources": "Los entrenamientos no están disponibles en cajas de conocimiento vacías.",
 	"stash.settings.processes.training.not-allowed": "Los entrenamientos no están disponibles en las cuentas básicas.",
 	"stash.settings.processes.training.select-entities": "Escoger grupo de entidades",
+	"stash.settings.processes.training.select-labelset": "Elija un conjunto de etiquetas",
 	"stash.settings.processes.training.select-labelsets": "Escoge las etiquetas",
 	"stash.settings.processes.training.select_all": "Seleccionar todo",
+	"stash.settings.processes.training.start": "Empezar a entrenar",
+	"stash.settings.processes.training.stop": "Dejar de entrenar",
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
 	"stash.side.activity": "Registro de actividad",
 	"stash.side.audit": "Auditoría",
