--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -569,13 +569,25 @@
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "Important! Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"stash.settings": "Preferències de la caixa de coneixament",
+	"stash.settings.processes.classifier": "Formació sobre la intenció de cerca d'etiquetes",
+	"stash.settings.processes.classifier.info": "Per obtenir suggeriments de cerca d'etiquetes precisos, el contingut existent s'ha d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.ner": "Formació de reconeixement d'entitats anomenades",
+	"stash.settings.processes.ner.info": "Per reconèixer les vostres entitats personalitzades automàticament, el contingut existent s'ha d'anotar amb les vostres entitats personalitzades. A mesura que s'anoti més contingut, la formació millorarà. Podeu crear noves entitats personalitzades des de la pàgina Estadístiques.",
+	"stash.settings.processes.paragraph_labeler": " Formació automàtica d'etiquetes de paràgrafs",
+	"stash.settings.processes.paragraph_labeler.info": "Per etiquetar els paràgrafs automàticament, s'han d'etiquetar els paràgrafs existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.resource_labeler": " Formació automàtica d'etiquetes de recursos",
+	"stash.settings.processes.resource_labeler.info": "Per etiquetar recursos automàticament, cal etiquetar els recursos existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.training.active": "Hi ha un entrenament actiu que pots aturar en qualsevol moment. Rebràs un correu electrònic quan estigui complet.",
 	"stash.settings.processes.training.agreement": "Accepto els càrrecs incorreguts en seleccionar aquesta opció",
 	"stash.settings.processes.training.last_run": "Última execució: {{ runDate }}",
 	"stash.settings.processes.training.no-resources": "Els entrenaments no estan disponibles en les caixes de coneixement buides.",
 	"stash.settings.processes.training.not-allowed": "Els entrenaments no estan disponibles en els comptes bàsics.",
 	"stash.settings.processes.training.select-entities": "Triar grups d'entitats",
+	"stash.settings.processes.training.select-labelset": "Trieu un conjunt d'etiquetes",
 	"stash.settings.processes.training.select-labelsets": "Tria les etiquetes",
 	"stash.settings.processes.training.select_all": "Seleccionar tot",
+	"stash.settings.processes.training.start": "Comença a entrenar",
+	"stash.settings.processes.training.stop": "Deixa d'entrenar",
 	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
 	"stash.side.activity": "Registre d'activitat",
 	"stash.side.audit": "Auditoria",
