Add paragraph annotation skeleton + some fixes and improvements
  - Fix nav section active state management in edit-resource.component.ts
  - Rename `ParagraphWithTextAndAnnotations` to `ParagraphWithTextAndClassifications`
  - Add common `ParagraphWithText` interface and `getParagraphs` function in helpers

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -488,6 +488,7 @@
 	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.title": "Títol del recurs",
 	"resource.tooltip.add-field": "Afegeix un camp",
+	"resource.tooltip.annotation": "Anotació",
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.edition": "Edició",
 	"resource.visible_columns_dropdown": "Es mostren les columnes",
