Highlight entities in text
  - grey by default
  - highlight with family color on family selection
  - when no family is selected:
    - clicking on any entity display a toast explaining family selection is required
    - hovering entity display its family name in a native tooltip
  - when family is selected:
    - clicking on entity from selected family display only delete button
    - clicking on entity from other families display both delete and change button
    - selecting text on the paragraph display only confirm button

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -482,7 +482,7 @@
 	"resource.entities.loc": "Geography",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Money",
-	"resource.entities.no-entity": "No entity yet",
+	"resource.entities.no-entity": "No annotation yet",
 	"resource.entities.norp": "Nationalities",
 	"resource.entities.org": "Organizations",
 	"resource.entities.percent": "Percentage",
@@ -493,6 +493,8 @@
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.failed_resources_popover": "Processing failed files",
+	"resource.field-annotation.help": "Select a family to highlight and annotate the corresponding entities",
+	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
 	"resource.field-classification": "Paragraphs classification",
 	"resource.field-file": "File Field",
 	"resource.field-file.dropzone": "Drop your file here or click to select it",
