--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -436,7 +436,7 @@
 	"resource.entities.loc": "Geografia",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Diners",
-	"resource.entities.no-entity": "Encara no hi ha cap entitat",
+	"resource.entities.no-entity": "Encara no hi ha cap anotació",
 	"resource.entities.norp": "Nacionalitats",
 	"resource.entities.org": "Organitzacions",
 	"resource.entities.percent": "Percentatge",
@@ -447,6 +447,8 @@
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
+	"resource.field-annotation.help": "Seleccioneu una família per destacar i anotar les entitats corresponents",
+	"resource.field-annotation.select-family-before": "Seleccioneu una família perquè pugueu afegir/editar/eliminar anotacions",
 	"resource.field-classification": "Classificació de paràgrafs",
 	"resource.field-file": "Camp de Fitxer",
 	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
