enable dataset import

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -363,13 +363,15 @@
 	"onboarding.dataset.delete_in_progress": "Deleting sample dataset",
 	"onboarding.dataset.delete_partially_successful": "Sample dataset partially deleted (deletion of {{error}} resources failed)",
 	"onboarding.dataset.delete_successful": "Sample dataset deleted",
-	"onboarding.dataset.description": "The fastest way to get started and explore how Nuclia works is to import a sample dataset. You'll be able to easily delete it at any time.",
 	"onboarding.dataset.import": "Import data",
 	"onboarding.dataset.import_failed": "Sample dataset import failed",
 	"onboarding.dataset.importing_description": "This can take a few seconds… Almost there! 🙃",
 	"onboarding.dataset.importing_title": "Importing dataset",
-	"onboarding.dataset.title": "Start using Nuclia with your own data",
-	"onboarding.dataset.upload-links": "Upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
+	"onboarding.dataset.option1": "Play with a sample dataset instantly…",
+	"onboarding.dataset.option1.description": "The fastest way to get started and explore how Nuclia works is to import a sample dataset. You'll be able to easily delete it at any time.",
+	"onboarding.dataset.option2": "… or use your own data",
+	"onboarding.dataset.option2.description": "Upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
+	"onboarding.dataset.title": "Start using Nuclia",
 	"onboarding.get_started": "Get started",
 	"onboarding.industry.IT_software": "IT / Software",
 	"onboarding.industry.chemical_industry": "Chemical industry",
@@ -469,6 +471,8 @@
 	"resource.delete_resources_warning": "Deleting these documents will also delete all processed information.",
 	"resource.description.title": "Description",
 	"resource.edit": "Edit & Annotate",
+	"resource.empty": "There is no content in your knowledge box at the moment.",
+	"resource.empty.import": "Start using Nuclia instantly by picking a sample dataset. This is the fastest way to get started and explore how Nuclia works.",
 	"resource.entities.date": "Date",
 	"resource.entities.event": "Events",
 	"resource.entities.fac": "Constructions",
