--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -321,13 +321,15 @@
 	"onboarding.dataset.delete_in_progress": "Eliminación de un conjunto de datos de muestra",
 	"onboarding.dataset.delete_partially_successful": "Conjunto de datos de muestra eliminado parcialmente (falló la eliminación de {{error}} recursos)",
 	"onboarding.dataset.delete_successful": "Conjunto de datos de muestra eliminado",
-	"onboarding.dataset.description": "La forma más rápida de comenzar y explorar cómo funciona Nuclia es importar un conjunto de datos de muestra. Podrás eliminarlo fácilmente en cualquier momento.",
 	"onboarding.dataset.import": "Datos de importacion",
 	"onboarding.dataset.import_failed": "La importación del conjunto de datos de muestra falló",
 	"onboarding.dataset.importing_description": "Esto puede tardar unos segundos... ¡Ya casi llegamos! 🙃",
 	"onboarding.dataset.importing_title": "Importando conjunto de datos",
-	"onboarding.dataset.title": "Comienza a usar Nuclia con tus propios datos",
-	"onboarding.dataset.upload-links": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
+	"onboarding.dataset.option1": "Juega con un conjunto de datos de muestra al instante...",
+	"onboarding.dataset.option1.description": "La forma más rápida de comenzar y explorar cómo funciona Nuclia es importar un conjunto de datos de muestra. Podrás eliminarlo fácilmente en cualquier momento.",
+	"onboarding.dataset.option2": "… o usa tus propios datos",
+	"onboarding.dataset.option2.description": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
+	"onboarding.dataset.title": "Comienza a usar Nuclia",
 	"onboarding.get_started": "Empezar",
 	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Industria química",
@@ -423,6 +425,8 @@
 	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
 	"resource.description.title": "Descripción",
 	"resource.edit": "Editar y anotar",
+	"resource.empty": "No hay contenido en su caja de conocimiento en este momento.",
+	"resource.empty.import": "Comience a usar Nuclia al instante eligiendo un conjunto de datos de muestra. Esta es la forma más rápida de comenzar y explorar cómo funciona Nuclia.",
 	"resource.entities.date": "Fechas",
 	"resource.entities.event": "Eventos",
 	"resource.entities.fac": "Construcciones",
