--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -321,13 +321,15 @@
 	"onboarding.dataset.delete_in_progress": "S'està suprimint el conjunt de dades de mostra",
 	"onboarding.dataset.delete_partially_successful": "S'ha suprimit parcialment el conjunt de dades de mostra (ha fallat la supressió de {{error}} recursos)",
 	"onboarding.dataset.delete_successful": "S'ha suprimit el conjunt de dades de mostra",
-	"onboarding.dataset.description": "La manera més ràpida de començar i explorar com funciona Nuclia és importar un conjunt de dades de mostra. Podreu suprimir-lo fàcilment en qualsevol moment.",
 	"onboarding.dataset.import": "Importa dades",
 	"onboarding.dataset.import_failed": "La importació del conjunt de dades de mostra ha fallat",
 	"onboarding.dataset.importing_description": "Això pot trigar uns segons... Gairebé allà! 🙃",
 	"onboarding.dataset.importing_title": "Importació del conjunt de dades",
-	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia amb les vostres dades",
-	"onboarding.dataset.upload-links": "Carregueu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
+	"onboarding.dataset.option1": "Juga amb un conjunt de dades de mostra a l'instant...",
+	"onboarding.dataset.option1.description": "La manera més ràpida de començar i explorar com funciona Nuclia és importar un conjunt de dades de mostra. Podreu suprimir-lo fàcilment en qualsevol moment.",
+	"onboarding.dataset.option2": "… o utilitzeu les vostres pròpies dades",
+	"onboarding.dataset.option2.description": "Carregueu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
+	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
 	"onboarding.get_started": "Començar",
 	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Indústria química",
@@ -423,6 +425,8 @@
 	"resource.delete_resources_warning": "Si elimines aquests documents també s’esborrarà tota la informació processada.",
 	"resource.description.title": "Descripció",
 	"resource.edit": "Edita i anota",
+	"resource.empty": "No hi ha contingut al vostre caixa de coneixement en aquest moment.",
+	"resource.empty.import": "Comenceu a utilitzar Nuclia a l'instant escollint un conjunt de dades de mostra. Aquesta és la manera més ràpida de començar i explorar com funciona Nuclia.",
 	"resource.entities.date": "Dates",
 	"resource.entities.event": "Esdeveniments",
 	"resource.entities.fac": "Construccions",
